Left panel layout

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,54 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="main-wrapper">
+    <div class="frosted-glass today-panel">
+      <div class="today-status">
+        <i class="today-icon las la-cloud-rain"></i>
+        <p class="today-temp">25<span class="temp-unit">C</span></p>
+        <p class="today-condition">Rain</p>
+      </div>
+      <p class="location">Nowhere Land</p>
+      <div class="today-extras">
+        <div class="extra-container">
+          <i class="extra-icon las la-thermometer-half"></i>
+          <p class="extra-info">
+            <i class="las la-long-arrow-alt-down"></i>
+            <span id="min-temp">23</span><span class="temp-unit">C</span>
+            <i class="las la-long-arrow-alt-up"></i>
+            <span id="max-temp">28</span><span class="temp-unit">C</span>
+          </p>
+          <p class="extra-name">Min | Max</p>
+        </div>
+        <div class="extra-container">
+          <i class="extra-icon las la-temperature-high"></i>
+          <p class="extra-info">
+            <span id="feels-like">23</span><span class="temp-unit">C</span>
+          </p>
+          <p class="extra-name">Feels Like</p>
+        </div>
+        <div class="extra-container">
+          <i class="extra-icon las la-wind"></i>
+          <p class="extra-info" id="wind-speed">5 km/h</p>
+          <p class="extra-name">Wind Speed</p>
+        </div>
+        <div class="extra-container">
+          <i class="extra-icon las la-umbrella"></i>
+          <p class="extra-info" id="rain-chance">98%</p>
+          <p class="extra-name">Rain Probability</p>
+        </div>
+        <div class="extra-container">
+          <i class="extra-icon las la-dot-circle"></i>
+          <p class="extra-info" id="pressure">10100 hPa</p>
+          <p class="extra-name">Pressure</p>
+        </div>
+        <div class="extra-container">
+          <i class="extra-icon las la-sun"></i>
+          <p class="extra-info" id="uv">0.0</p>
+          <p class="extra-name">UV Index</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
