--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div class="frosted-glass today-panel">
       <div class="today-status">
         <i class="today-icon las la-cloud-rain"></i>
-        <p class="today-temp">25<span class="temp-unit">C</span></p>
+        <p class="today-temp">25<span class="temp-unit">&#176;C</span></p>
         <p class="today-condition">Rain</p>
       </div>
       <p class="location">Nowhere Land</p>
@@ -20,16 +20,16 @@
           <i class="extra-icon las la-thermometer-half"></i>
           <p class="extra-info">
             <i class="las la-long-arrow-alt-down"></i>
-            <span id="min-temp">23</span><span class="temp-unit">C</span>
+            <span id="min-temp">23</span><span class="temp-unit">&#176;C</span>
             <i class="las la-long-arrow-alt-up"></i>
-            <span id="max-temp">28</span><span class="temp-unit">C</span>
+            <span id="max-temp">28</span><span class="temp-unit">&#176;C</span>
           </p>
           <p class="extra-name">Min | Max</p>
         </div>
         <div class="extra-container">
           <i class="extra-icon las la-temperature-high"></i>
           <p class="extra-info">
-            <span id="feels-like">23</span><span class="temp-unit">C</span>
+            <span id="feels-like">23</span><span class="temp-unit">&#176;C</span>
           </p>
           <p class="extra-name">Feels Like</p>
         </div>
