--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <div class="frosted-glass today-panel">
       <div class="today-status">
         <i class="today-icon las la-cloud-rain"></i>
-        <p class="today-temp">25<span class="temp-unit">&#176;C</span></p>
-        <p class="today-condition">Rain</p>
+        <p class="today-temp"><span id="today-temp">25</span><span class="temp-unit">&#176;C</span></p>
+        <p class="today-condition" id="today-condition">Rain</p>
       </div>
-      <p class="location">Nowhere Land</p>
+      <p class="location" id="location">Nowhere Land</p>
       <div class="today-extras">
         <div class="extra-container">
           <i class="extra-icon las la-thermometer-half"></i>
@@ -39,9 +39,9 @@
           <p class="extra-name">Wind Speed</p>
         </div>
         <div class="extra-container">
-          <i class="extra-icon las la-umbrella"></i>
-          <p class="extra-info" id="rain-chance">98%</p>
-          <p class="extra-name">Rain Probability</p>
+          <i class="extra-icon las la-tint"></i>
+          <p class="extra-info" id="precipitation">98%</p>
+          <p class="extra-name">Precipitation</p>
         </div>
         <div class="extra-container">
           <i class="extra-icon las la-dot-circle"></i>
