--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <div class="main-wrapper">
     <div class="frosted-glass today-panel">
       <div class="today-status">
-        <i class="today-icon las la-cloud-rain"></i>
+        <i class="today-icon las la-cloud-rain" id="today-icon"></i>
         <p class="today-temp"><span id="today-temp">25</span><span class="temp-unit">&#176;C</span></p>
         <p class="today-condition" id="today-condition">Rain</p>
       </div>
