Forecast card mockup

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,26 @@
         </button>
       </div>
     </div>
+    <div class="daily-forecast">
+      <div class="daily-card frosted-glass">
+        <i class="extra-icon las la-sun" id="today-icon"></i>
+        <p class="forecast-day">Wednesday</p>
+        <div class="daily-stats">
+          <p>
+            <i class="forecast-extra-icon las la-thermometer-half"></i>
+            <i class="forecast-extra-icon las la-long-arrow-alt-down"></i>
+            <span>5<span class="temp-unit">&#176;C</span></span>
+            <i class="forecast-extra-icon las la-long-arrow-alt-up"></i>
+            <span>10<span class="temp-unit">&#176;C</span></span>
+          </p>
+          <div class="stat-spacer"></div>
+          <p>
+            <i class="las la-umbrella"></i>
+            <span>69%</span>
+          </p>
+        </div>
+      </div>
+    </div>
     <div class="overlay hidden" id="overlay">
       <div class="search-popup">
         <div class="header-box">
