WIP Forecast card generator

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
     </div>
     <div class="daily-forecast">
       <div class="daily-card frosted-glass">
-        <i class="extra-icon las la-sun" id="today-icon"></i>
+        <i class="extra-icon las la-sun"></i>
         <p class="forecast-day">Wednesday</p>
         <div class="daily-stats">
           <p>
@@ -81,9 +81,7 @@
             <span>5<span class="temp-unit">&#176;C</span></span>
             <i class="forecast-extra-icon las la-long-arrow-alt-up"></i>
             <span>10<span class="temp-unit">&#176;C</span></span>
-          </p>
-          <div class="stat-spacer"></div>
-          <p>
+            <div class="stat-spacer"></div>
             <i class="las la-umbrella"></i>
             <span>69%</span>
           </p>
