Clean up HTML and css

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
       <div class="frosted-glass today-panel">
         <div class="today-status">
           <i class="today-icon las la-cloud-rain" id="today-icon"></i>
-          <div class="status-top">
-            <p class="today-temp"><span id="today-temp">25</span><span class="temp-unit" id="top-temp">&#176;C</span></p>
-          </div>
+          <p class="today-temp"><span id="today-temp">25</span><span class="temp-unit" id="top-temp">&#176;C</span></p>
           <p class="today-condition" id="today-condition">Rain</p>
         </div>
         <p class="location" id="location"></p>
@@ -60,8 +58,8 @@
       </div>
       <div class="config-buttons">
         <button href="#" class="config-btn frosted-glass" id="swap-units">
-          <p>&#176;C/&#176;F</p>
-        </>
+          &#176;C/&#176;F
+        </button>
         <button href="#" class="config-btn frosted-glass" id="reload">
           <i class="las la-sync"></i>
         </button>
@@ -71,6 +69,7 @@
       </div>
     </div>
     <div class="daily-forecast">
+      <!-- Generated using JS -->
     </div>
     <div class="overlay hidden" id="overlay">
       <div class="search-popup">
